# python-geo-devcontainer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.lite  devcontainer.json  post_create_commands.sh
